# exercise-hog-opencv-cpp

./: CMakeLists.txt  README.md  Setting.h  application.cfg  convolution.h  hog.h  hog_descriptor_structure.h  image.h  main.cpp  svm.h  util.h
